# idl-rs

./: Cargo.toml  README.md
.github/workflows/: cla.yml  rust.yml
bridge/: Cargo.toml
bridge/src/: chart_decimation.rs  fft.rs  frb_generated.rs  histogram.rs  laps.rs  lib.rs  math.rs  scatter.rs  session.rs  spectrogram.rs  table.rs  tracks.rs  video.rs
cli/: Cargo.toml
cli/src/: envelope.rs  main.rs  recover.rs  table_cmd.rs
cli/tests/: overlay_cmd.rs  video_cmd.rs
core/: Cargo.toml
core/examples/: compare_sag.rs  diag_coupling.rs  diag_report.rs  drop_report.rs  estimate_trace.rs
core/src/: calibration.rs  chart_decimation.rs  clip_reconstruct.rs  config.rs  fft.rs  filters.rs  gps.rs  histogram.rs  integration.rs  lib.rs  rotation.rs  scatter.rs  spectrogram.rs  statistics.rs  track_projection.rs  variance.rs
core/src/estimate/: detect.rs  geometry.rs  iekf.rs  ledger.rs  mod.rs  model.rs  noise.rs  orient.rs  process.rs  run.rs  schema.rs  smooth.rs  state.rs
core/src/estimate/measurements/: gps.rs  gravity.rs  mod.rs  prior.rs  zupt.rs
core/src/export/: csv.rs  json.rs  mod.rs
core/src/export/fit/: encoder.rs  mod.rs
core/src/laps/: detect.rs  geometry.rs  mod.rs  model.rs
core/src/math/: aggregate.rs  channel_def.rs  error.rs  eval.rs  mod.rs  parse.rs  resolve.rs  tests_parity.rs  token.rs  value.rs  variance_geom.rs  vector.rs
core/src/overlay/: mod.rs  model.rs  sample.rs
core/src/parse/: mod.rs  reader.rs  records.rs  test_buffers.rs  v3.rs
core/src/session/: column.rs  handle.rs  mod.rs  synthesis.rs
core/src/table/: eval.rs  mod.rs  model.rs
core/src/track_artifact/: mod.rs  model.rs  read.rs
core/src/tracks/: detect.rs  geometry.rs  mod.rs
core/src/video/: gpmf.rs  mod.rs  mp4box.rs  render.rs  sync.rs
core/src/workbook/: apply.rs  mod.rs  model.rs  read.rs
video-export/: Cargo.toml
video-export/src/: args.rs  export.rs  lib.rs  probe.rs
