[package]
name = "idl-rs-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "idl-rs"
path = "src/main.rs"

[dependencies]
idl-rs = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
