[package]
name = "idl-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "idl_rs"

[dependencies]
sci-rs = "0.4"
nalgebra = "0.33"
rustfft = "6.2"
realfft = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
fitparser = "0.9"

[features]
test-fixtures = []
