[package]
name = "idl-rs-video-export"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Sidecar-ffmpeg export driver for idl-rs video overlays (the only process-spawning component)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
